--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NotificationSaver</string>
     <string name="header_title">NotificationSaver</string>
+    <string name="app_icon">App Icon</string>
+    <string name="notification_icon">Notification Icon</string>
 </resources>
